--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+:root {
+  --primary-color: #3e307b;
+  --secondary-color: #fff;
+
+}
 .App {
   text-align: center;
   width: 380px;
@@ -9,7 +14,7 @@
 }
 
 button {
-  background-color: #18181b;
+  background-color: var(--primary-color);
   border-radius: 5px;
   color: #fff;
   padding: 10px 20px;
