--- a/src/components/JudgeHistoryCard/JudgeHistoryCard.css
+++ b/src/components/JudgeHistoryCard/JudgeHistoryCard.css
@@ -1,11 +1,11 @@
 .judge-card {
   width: 100%;
   background-color: white;
-  color: black;
+  color: var(--primary-color);
   border-radius: 6px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   position: relative;
-  border: 2px solid #000;
+  border: 1.5px solid var(--primary-color);
 }
 
 .judge-address {
@@ -81,5 +81,5 @@
 
 .progress-fill {
   height: 100%;
-  background-color: black;
+  background-color: var(--primary-color);
 }
