--- a/src/components/ReportForm/ReportForm.css
+++ b/src/components/ReportForm/ReportForm.css
@@ -10,6 +10,13 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+.report-form-title{
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: var(--primary-color);
+}
+
 .report-form-input{
     box-sizing: border-box;
     width: 100%;
@@ -27,6 +34,7 @@
 .report-form-label{
     font-weight: bold;
     margin-bottom: 5px;
+    color: var(--primary-color);
 }
 
 .report-form-button{
@@ -36,13 +44,13 @@
 .report-form-white-button{
     width: 100%;
     background-color: white;
-    color: black;
-    border: 1px solid black;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
 }
 
 .report-form-white-button:hover {
-    background-color: black;
+    background-color: var(--primary-color);
     color: white;
     border: 1px solid white;
-    transition: background-color 0.3s, color 0.3s;
+    opacity: 0.8;
 }
