--- a/src/components/TransactionCard/TransactionCard.css
+++ b/src/components/TransactionCard/TransactionCard.css
@@ -1,11 +1,11 @@
 .transaction-card {
   width: 100%;
   background-color: white;
-  color: black;
+  color: var(--primary-color);
   border-radius: 6px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   position: relative;
-  border: 2px solid #000;
+  border: 1.5px solid var(--primary-color);
 }
 
 .transaction-address {
