--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -20,10 +20,10 @@
 }
 
 .home-mode-button {
-  border: 2px solid #000;
+  border: 2px solid var(--primary-color);
   width: 100%;
   background-color: #fff;
-  color: black;
+  color: var(--primary-color);
   padding: 8px 16px;
   border-radius: 5px;
   cursor: pointer;
@@ -31,9 +31,9 @@
 }
 
 .home-mode-button-selected {
-  border: 2px solid #000;
+  border: 2px solid var(--primary-color);
   width: 100%;
-  background-color: #000;
+  background-color: var(--primary-color);
   color: #fff;
   padding: 8px 16px;
   border-radius: 5px;
@@ -42,6 +42,7 @@
 }
 
 .home-mode-button:hover {
-  background-color: rgb(24, 24, 27, 0.9);
+  background-color: var(--primary-color);
+  opacity: 0.8;
   color: #fff;
 }
