--- a/src/pages/Account/Account.css
+++ b/src/pages/Account/Account.css
@@ -15,7 +15,8 @@
 }
 
 .account-header-text{
-    color: white;
+    color: var(--primary-color);
+    font-size: 24px;
     display: flex;
     font-weight: 800 !important;
 }
