--- a/src/components/TransactionCartCard/TransactionCartCard.css
+++ b/src/components/TransactionCartCard/TransactionCartCard.css
@@ -6,6 +6,7 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   position: relative;
   border: 1.5px solid var(--primary-color);
+  box-sizing: border-box;
 }
 
 .transaction-address {
@@ -17,7 +18,6 @@
 .transaction-box {
   display: flex;
   align-items: center;
-  min-width: 600px;
   padding: 10px;
 }
 
